--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-todo-app",
+  "name": "professional-todo-app",
   "private": true,
   "version": "0.0.0",
   "description": "A professional Todo application built with React and Redux",
